# pdf-to-ppt

./: .gitignore  README.md  SKILL.md  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: b2a71849-de4f-4a41-8cf1-9a8892391bd7.json
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/1fe5315b-12e7-4efb-a8a0-fb92d85008c8/: session-started.json
.omc/state/sessions/ac0ff7e7-1572-4040-b0e2-26e2b2e78f41/: session-started.json
.omc/state/sessions/b2a71849-de4f-4a41-8cf1-9a8892391bd7/: session-started.json
.omc/state/sessions/f57cf9dc-1093-450e-9736-febef21bdc06/: session-started.json
.omx/context/: pdf-to-ppt-vendored-opendataloader-20260605T012238Z.md
.omx/plans/: completion-review-pdf-to-ppt-vendored-opendataloader.md  prd-pdf-to-ppt-vendored-opendataloader.md  test-spec-pdf-to-ppt-vendored-opendataloader.md
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
pdfppt_core/: __init__.py  cli.py
prompts/: chatgpt-pro.md  visual-spec-chatgpt-pro.md
scripts/: __init__.py  build_parser.sh  extract_pdf_json.py  json_to_pptx.py  macos_vision_ocr_to_pptx.py  pdf_to_pptx.py  raw_pdf_text_to_pptx.py  visual_spec_to_pptx.py
tests/: test_json_to_pptx.py  test_macos_vision_ocr_to_pptx.py  test_raw_pdf_text_to_pptx.py  test_visual_spec_to_pptx.py
tests/fixtures/: opendataloader_sample.json  poppler_bbox_sample.html  visual_spec_sample.json
