[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfppt"
version = "0.1.0"
description = "Local PDF to editable PowerPoint conversion engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["python-pptx>=1.0.0"]

[project.scripts]
pdfppt = "pdfppt_core.cli:main"

[tool.setuptools]
packages = ["pdfppt_core", "scripts"]
